syntax = "proto3";

package catfacts;

service CatFacts {
    rpc GetCatFact (CatFactRequest) returns (CatFactResponse) {}
    rpc ListCatFacts (CatFactRequest) returns (stream CatFactResponse) {}
    rpc StreamCatFacts (stream CatFactRequest) returns (stream CatFactResponse) {}
}

message CatFactRequest {
    int64 id = 1;
}

message CatFactResponse {
    int64 factNum = 1;
    string fact = 2;
}